// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app.codeCharta.core.download  should remove visible attribute from settings.map 1`] = `
Object {
  "attributes": Object {},
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "attributes": Object {},
          "name": "aa",
          "path": "/root/a/aa",
          "type": "File",
        },
      ],
      "name": "a",
      "path": "/root/a",
      "type": "Folder",
    },
    Object {
      "attributes": Object {},
      "name": "b",
      "path": "/root/b",
      "type": "File",
    },
  ],
  "name": "root",
  "path": "/root",
  "type": "Folder",
}
`;

exports[`app.codeCharta.core.download  should return correct project json content 1`] = `
Object {
  "apiVersion": "1.1.1",
  "attributeTypes": "myAttributeTypes",
  "blacklist": undefined,
  "edges": "myEdges",
  "fileName": "myFilename.14_12_2018.json",
  "nodes": Array [
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "attributes": Object {},
          "children": Array [
            Object {
              "attributes": Object {},
              "name": "aa",
              "path": "/root/a/aa",
              "type": "File",
            },
          ],
          "name": "a",
          "path": "/root/a",
          "type": "Folder",
        },
        Object {
          "attributes": Object {},
          "name": "b",
          "path": "/root/b",
          "type": "File",
        },
      ],
      "name": "root",
      "path": "/root",
      "type": "Folder",
    },
  ],
  "projectName": "myProjectName",
}
`;
